syntax = "proto3";

package family;

option java_multiple_files = true;
option java_package = "family";
option java_outer_classname = "FamilyProto";

// Üyelerin diske kaydedeceği mesaj yapısı
message StoredMessage {
  int32 messageId = 1;
  string content = 2;
}

// Kayıt sonucu
message StoreResponse {
  bool success = 1;
  string info = 2;
}

// Mesaj getirme isteği
message GetRequest {
  int32 messageId = 1;
}

message NodeInfo {
  string host = 1;
  int32 port = 2;
  string id = 3;
}

message FamilyView {
  repeated NodeInfo members = 1;
}

service FamilyService {
  // Liderin üyeye: "Bunu kaydet" demesi
  rpc Store(StoredMessage) returns (StoreResponse);
  
  // Liderin üyeden: "Şu ID'li mesajı ver" demesi
  rpc Retrieve(GetRequest) returns (StoredMessage);

  // Üye kaydı
  rpc Join(NodeInfo) returns (FamilyView);
}